no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 5a0b001c7f6caaf2d3c90cf4d66d7eadfa61571c

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-kmr/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-kmr/strings.xml
@@ -3322,11 +3322,67 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Gir
 dana
 nternet
 tune
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Wisa
+xuya
+dike
+ku
+problemeke
+bi
+gir
+dana
+te
+ya
+nternet
+re
+heye
 <
 /
 string
@@ -3361,6 +3417,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Gir
 dana
@@ -3381,6 +3451,104 @@ ve
 bar
 bike
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Hewl
+bide
+bi
+c
+hazeke
+din
+gir
+dan
+k
+.
+Modem
+yan
+routera
+xwe
+kontrol
+bike
+.
+Gir
+dana
+Wi
+-
+Fiy
+qut
+bike
+gir
+dan
+d
+sa
+ke
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Koda
+ewtiy
+:
+NS_ERROR_OFFLINE
 <
 /
 string
