--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -22444,6 +22444,20 @@ name
 "
 bookmark_saved_snackbar
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chaidh
 an
@@ -23486,13 +23500,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Chaidh
 na
@@ -24036,13 +24043,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Pasgan
@@ -28262,6 +28262,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chaidh
 na
@@ -28318,13 +28332,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Chaidh
@@ -34471,6 +34478,110 @@ string
 !
 -
 -
+Description
+of
+empty
+list
+of
+saved
+passwords
+.
+Placeholder
+is
+replaced
+with
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_saved_logins_description_empty_text_2
+"
+>
+Nochdaidh
+na
+faclan
+-
+faire
+a
+sh
+bhaileas
+tu
+no
+a
+shioncronaicheas
+tu
+ri
+%
+s
+an
+-
+seo
+.
+Crioptaichidh
+sinn
+gach
+facal
+-
+faire
+a
+sh
+bhaileas
+tu
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Clickable
+text
+for
+opening
+an
+external
+link
+for
+more
+information
+about
+Sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_saved_logins_description_empty_learn_more_link_2
+"
+>
+Faigh
+barrachd
+fiosrachaidh
+mun
+t
+-
+sioncronachadh
+<
+/
+string
+>
+<
+!
+-
+-
 Preference
 to
 access
@@ -34504,6 +34615,119 @@ string
 !
 -
 -
+Empty
+description
+of
+list
+of
+login
+exceptions
+that
+we
+never
+save
+passwords
+for
+.
+Parameter
+will
+be
+replaced
+by
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_exceptions_description_empty_2
+"
+>
+Cha
+s
+bhail
+%
+s
+faclan
+-
+faire
+air
+l
+raichean
+a
+th
+air
+an
+liosta
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+of
+list
+of
+login
+exceptions
+that
+we
+never
+save
+passwords
+for
+.
+Parameter
+will
+be
+replaced
+by
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_exceptions_description_2
+"
+>
+Cha
+s
+bhail
+%
+s
+faclan
+-
+faire
+air
+na
+l
+raichean
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 on
 button
@@ -34528,6 +34752,37 @@ Sguab
 gach
 eisgeachd
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Hint
+for
+search
+box
+in
+passwords
+list
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_saved_logins_search_2
+"
+>
+Lorg
+sna
+faclan
+-
+faire
 <
 /
 string
@@ -35060,6 +35315,161 @@ string
 !
 -
 -
+Message
+displayed
+in
+biometric
+prompt
+displayed
+for
+authentication
+before
+allowing
+users
+to
+view
+their
+passwords
+-
+-
+>
+<
+string
+name
+=
+"
+logins_biometric_prompt_message_2
+"
+>
+Thoir
+a
+ghlas
+dheth
+a
+shealltainn
+nam
+faclan
+-
+faire
+a
+sh
+bhail
+thu
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+warning
+dialog
+if
+users
+have
+no
+device
+authentication
+set
+up
+-
+-
+>
+<
+string
+name
+=
+"
+logins_warning_dialog_title_2
+"
+>
+C
+m
+na
+faclan
+-
+faire
+agad
+t
+arainte
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+of
+warning
+dialog
+if
+users
+have
+no
+device
+authentication
+set
+up
+-
+-
+>
+<
+string
+name
+=
+"
+logins_warning_dialog_message_2
+"
+>
+Suidhich
+p
+tran
+glasadh
+an
+uidheim
+PIN
+no
+facal
+-
+faire
+airson
+na
+faclan
+-
+faire
+a
+sh
+bhail
+thu
+a
+chumail
+d
+omhair
+fi
+ma
+gheibh
+cuideigin
+eile
+gr
+im
+air
+an
+uidheam
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Negative
 button
 to
@@ -35358,6 +35768,46 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+-
+-
+>
+<
+string
+name
+=
+"
+saved_logins_menu_dropdown_chevron_icon_content_description_2
+"
+>
+Cl
+r
+-
+taice
+se
+rsachadh
+nam
+faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
 Autofill
 -
 -
@@ -35420,6 +35870,123 @@ preferences_addresses
 >
 Se
 laidhean
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+and
+title
+for
+managing
+the
+settings
+for
+payment
+methods
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_credit_cards_2
+"
+>
+D
+ighean
+p
+ighidh
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+saving
+and
+autofilling
+credit
+cards
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_credit_cards_save_and_autofill_cards_2
+"
+>
+S
+bhail
+is
+l
+on
+d
+ighean
+p
+ighidh
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+summary
+for
+saving
+and
+autofilling
+payment
+method
+data
+.
+Parameter
+will
+be
+replaced
+by
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_credit_cards_save_and_autofill_cards_summary_2
+"
+>
+Crioptaichidh
+%
+s
+gach
+d
+igh
+p
+ighidh
+a
+sh
+bhaileas
+tu
 <
 /
 string
@@ -35516,6 +36083,63 @@ Preference
 option
 for
 adding
+a
+card
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_credit_cards_add_credit_card_2
+"
+>
+Cuir
+cairt
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+option
+for
+managing
+saved
+cards
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_credit_cards_manage_saved_cards_2
+"
+>
+Sti
+irich
+na
+cairtean
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+option
+for
+adding
 an
 address
 -
@@ -35563,6 +36187,80 @@ irich
 na
 se
 laidhean
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+saving
+and
+filling
+addresses
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_addresses_save_and_autofill_addresses_2
+"
+>
+S
+bhail
+is
+l
+on
+se
+laidhean
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+summary
+for
+saving
+and
+filling
+address
+data
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_addresses_save_and_autofill_addresses_summary_2
+"
+>
+Gabhaidh
+seo
+a
+-
+staigh
+ireamhan
+-
+f
+n
+is
+se
+laidhean
+puist
+-
+d
 <
 /
 string
@@ -35899,6 +36597,47 @@ The
 text
 for
 the
+confirmation
+message
+of
+"
+Delete
+card
+"
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_delete_dialog_confirmation_2
+"
+>
+A
+bheil
+thu
+airson
+a
+chairt
+a
+sguabadh
+s
+?
+<
+/
+string
+>
+<
+!
+-
+-
+The
+text
+for
+the
 positive
 button
 on
@@ -36068,6 +36807,68 @@ string
 !
 -
 -
+Error
+message
+for
+card
+number
+validation
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_number_validation_error_message_2
+"
+>
+Cuir
+a
+-
+steach
+ireamh
+cairt
+dhligheach
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+message
+for
+card
+name
+on
+card
+validation
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_name_on_card_validation_error_message_2
+"
+>
+Cuir
+ainm
+ris
+<
+/
+string
+>
+<
+!
+-
+-
 Message
 displayed
 in
@@ -36108,6 +36909,118 @@ a
 sh
 bhail
 thu
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+warning
+dialog
+if
+users
+have
+no
+device
+authentication
+set
+up
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_warning_dialog_title_2
+"
+>
+C
+m
+na
+d
+ighean
+p
+ighidh
+a
+sh
+bhail
+thu
+t
+arainte
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+of
+warning
+dialog
+if
+users
+have
+no
+device
+authentication
+set
+up
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_warning_dialog_message_3
+"
+>
+Suidhich
+p
+tran
+glasadh
+an
+uidheim
+PIN
+no
+facal
+-
+faire
+airson
+na
+d
+ighean
+p
+ighidh
+a
+sh
+bhail
+thu
+a
+chumail
+d
+omhair
+fi
+ma
+gheibh
+cuideigin
+eile
+gr
+im
+air
+an
+uidheam
+agad
+.
 <
 /
 string
@@ -36243,6 +37156,57 @@ string
 !
 -
 -
+Message
+displayed
+in
+biometric
+prompt
+for
+authentication
+before
+allowing
+users
+to
+use
+their
+stored
+payment
+method
+information
+-
+-
+>
+<
+string
+name
+=
+"
+credit_cards_biometric_prompt_unlock_message_2
+"
+>
+Thoir
+a
+ghlas
+dheth
+airson
+d
+ighean
+p
+ighidh
+a
+sh
+bhail
+thu
+a
+chleachdadh
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 of
 the
@@ -36329,6 +37293,61 @@ irich
 na
 se
 laidhean
+<
+/
+string
+>
+<
+!
+-
+-
+The
+header
+for
+the
+name
+of
+an
+address
+.
+Name
+represents
+a
+person
+'
+s
+full
+name
+typically
+made
+up
+of
+a
+first
+middle
+and
+last
+name
+e
+.
+g
+.
+John
+Joe
+Doe
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_name
+"
+>
+Ainm
 <
 /
 string
@@ -36698,6 +37717,47 @@ an
 se
 ladh
 s
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+for
+the
+"
+Delete
+address
+"
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+addressess_confirm_dialog_message_2
+"
+>
+A
+bheil
+thu
+airson
+an
+se
+ladh
+seo
+a
+sguabadh
+s
+?
 <
 /
 string
@@ -37272,6 +38332,162 @@ einnsein
 luirg
 ghn
 thaichte
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+TextField
+in
+which
+user
+enters
+custom
+search
+engine
+suggestion
+URL
+-
+-
+>
+<
+string
+name
+=
+"
+search_add_custom_engine_suggest_url_label
+"
+>
+API
+nam
+molaidhean
+luirg
+(
+roghainneil
+)
+<
+/
+string
+>
+<
+!
+-
+-
+Placeholder
+text
+shown
+in
+the
+Search
+Suggestion
+String
+TextField
+before
+a
+user
+enters
+text
+-
+-
+>
+<
+string
+name
+=
+"
+search_add_custom_engine_suggest_string_hint
+"
+>
+URL
+API
+nam
+molaidhean
+-
+luirg
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+text
+for
+the
+Search
+Suggestion
+String
+TextField
+.
+The
+%
+s
+is
+part
+of
+the
+string
+-
+-
+>
+<
+string
+name
+=
+"
+search_add_custom_engine_suggest_string_example_2
+"
+formatted
+=
+"
+false
+"
+>
+Cuir
+%
+s
+an
+ite
+a
+cheasnachain
+.
+Ball
+-
+eisimpleir
+:
+\
+nhttps
+:
+/
+/
+suggestqueries
+.
+google
+.
+com
+/
+complete
+/
+search
+?
+client
+=
+firefox
+&
+amp
+;
+q
+=
+%
+s
 <
 /
 string
@@ -38352,6 +39568,49 @@ string
 !
 -
 -
+Message
+in
+delete
+confirmation
+dialog
+for
+password
+-
+-
+>
+<
+string
+name
+=
+"
+login_deletion_confirmation_2
+"
+>
+A
+bheil
+thu
+cinnteach
+gu
+bheil
+thu
+airson
+am
+facal
+-
+faire
+seo
+a
+sguabadh
+s
+?
+<
+/
+string
+>
+<
+!
+-
+-
 Positive
 action
 of
@@ -38412,6 +39671,344 @@ string
 -
 -
 The
+saved
+password
+options
+menu
+description
+.
+-
+-
+>
+<
+string
+name
+=
+"
+login_options_menu_2
+"
+>
+Roghainnean
+nam
+faclan
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+The
+editable
+text
+field
+for
+a
+website
+address
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_hostname_description_3
+"
+>
+An
+raon
+teacsa
+so
+-
+dheasaichte
+airson
+se
+ladh
+na
+l
+raich
+-
+l
+n
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+editable
+text
+field
+for
+a
+username
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_username_description_3
+"
+>
+An
+raon
+teacsa
+so
+-
+dheasaichte
+airson
+an
+ainm
+-
+chleachdaiche
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+editable
+text
+field
+for
+a
+login
+'
+s
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_password_description_2
+"
+>
+An
+raon
+teacsa
+so
+-
+dheasaichte
+airson
+an
+fhacail
+-
+fhaire
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+button
+description
+to
+save
+changes
+to
+an
+edited
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+save_changes_to_login_2
+"
+>
+S
+bhail
+na
+h
+-
+atharraichean
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+page
+title
+for
+editing
+a
+saved
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+edit_2
+"
+>
+Deasaich
+am
+facal
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+The
+page
+title
+for
+adding
+new
+password
+.
+-
+-
+>
+<
+string
+name
+=
+"
+add_login_2
+"
+>
+Cuir
+facal
+-
+faire
+ris
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+text
+displayed
+underneath
+the
+password
+field
+when
+it
+is
+in
+an
+error
+case
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_password_required_2
+"
+>
+Cuir
+a
+-
+steach
+facal
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+The
+error
+message
+in
+add
+login
+view
+when
+username
+field
+is
+blank
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_username_required_2
+"
+>
+Cuir
+a
+-
+steach
+ainm
+-
+cleachdaiche
+<
+/
+string
+>
+<
+!
+-
+-
+The
 error
 message
 in
@@ -38447,6 +40044,54 @@ feum
 air
 ainm
 stair
+<
+/
+string
+>
+<
+!
+-
+-
+The
+error
+message
+in
+add
+login
+view
+when
+hostname
+field
+is
+blank
+.
+-
+-
+>
+<
+string
+name
+=
+"
+saved_login_hostname_required_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cuir
+a
+-
+steach
+se
+ladh
+-
+l
+n
 <
 /
 string
@@ -39376,6 +41021,40 @@ string
 !
 -
 -
+Hint
+for
+editing
+URL
+of
+a
+shortcut
+.
+-
+-
+>
+<
+string
+name
+=
+"
+shortcut_url_hint
+"
+>
+URL
+na
+h
+-
+ath
+-
+ghoirid
+<
+/
+string
+>
+<
+!
+-
+-
 Dialog
 button
 text
@@ -39512,6 +41191,171 @@ top_sites_sponsored_label
 "
 >
 Sponsairichte
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+menu
+item
+to
+edit
+a
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_top_site
+"
+>
+Deasaich
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+dialog
+title
+to
+edit
+a
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_title
+"
+>
+Deasaich
+an
+ath
+-
+ghoirid
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+caption
+to
+confirm
+the
+edit
+of
+the
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_save
+"
+>
+S
+bhail
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+message
+when
+the
+user
+entered
+an
+invalid
+URL
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_url_error
+"
+>
+Cuir
+a
+-
+steach
+URL
+dligheach
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+URL
+edit
+field
+in
+the
+edit
+top
+site
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_url_title
+"
+>
+URL
 <
 /
 string
@@ -40050,6 +41894,43 @@ Lorg
 le
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Default
+browser
+experiment
+-
+-
+>
+<
+!
+-
+-
+Default
+browser
+card
+title
+-
+-
+>
+<
+string
+name
+=
+"
+default_browser_experiment_card_title
+"
+>
+Suidhich
+brabhsair
+bhunaiteach
+eile
 <
 /
 string
@@ -40615,6 +42496,388 @@ Tadhail
 air
 na
 roghainnean
+<
+/
+string
+>
+<
+!
+-
+-
+Review
+quality
+check
+feature
+-
+-
+>
+<
+!
+-
+-
+Name
+for
+the
+review
+quality
+check
+feature
+used
+as
+title
+for
+the
+panel
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_feature_name_2
+"
+>
+Dearbhair
+nan
+l
+irmheasan
+<
+/
+string
+>
+<
+!
+-
+-
+Summary
+for
+grades
+A
+and
+B
+for
+review
+quality
+check
+adjusted
+grading
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_grade_a_b_description
+"
+>
+L
+irmheasan
+earbsach
+<
+/
+string
+>
+<
+!
+-
+-
+Summary
+for
+grade
+C
+for
+review
+quality
+check
+adjusted
+grading
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_grade_c_description
+"
+>
+Measgachadh
+de
+l
+irmheasan
+earbsach
+is
+neo
+-
+earbsach
+<
+/
+string
+>
+<
+!
+-
+-
+Summary
+for
+grades
+D
+and
+F
+for
+review
+quality
+check
+adjusted
+grading
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_grade_d_f_description
+"
+>
+L
+irmheasan
+neo
+-
+earbsach
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+title
+presenting
+the
+reliability
+of
+a
+product
+'
+s
+reviews
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_grade_title
+"
+>
+D
+cho
+earbsach
+s
+a
+tha
+na
+l
+irmheasan
+seo
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+when
+the
+rating
+has
+been
+updated
+by
+the
+review
+checker
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_adjusted_rating_title
+"
+>
+Rangachadh
+air
+a
+ghleusadh
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+a
+product
+'
+s
+adjusted
+star
+rating
+.
+The
+text
+presents
+that
+the
+product
+'
+s
+reviews
+which
+were
+evaluated
+as
+unreliable
+were
+removed
+from
+the
+adjusted
+rating
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_adjusted_rating_description_2
+"
+>
+St
+idhichte
+air
+l
+irmheasan
+earbsach
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+list
+of
+highlights
+from
+a
+product
+'
+s
+review
+emphasizing
+a
+product
+'
+s
+important
+traits
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_highlights_title
+"
+>
+Brod
+nan
+l
+irmheasan
+o
+chionn
+goirid
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+section
+explaining
+how
+we
+analyze
+the
+reliability
+of
+a
+product
+'
+s
+reviews
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_explanation_title
+"
+>
+Mar
+a
+dhearbhas
+sinn
+c
+ileachd
+nan
+l
+irmheasan
 <
 /
 string
