--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-kmr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-kmr/strings.xml
@@ -2882,6 +2882,44 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+Z
+detir
+bizane
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
@@ -3252,6 +3290,82 @@ string
 !
 -
 -
+Button
+to
+re
+-
+enable
+the
+extensions
+in
+the
+"
+crash
+"
+notification
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_restart_button
+"
+>
+P
+vekan
+ji
+n
+ve
+bide
+destp
+kirin
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+extensions
+manager
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_find_more_extensions_button_text
+"
+>
+Z
+detir
+p
+vekan
+bib
+ne
+<
+/
+string
+>
+<
+!
+-
+-
 The
 label
 of
@@ -3536,6 +3650,65 @@ reke
 n
 hewce
 ye
+<
+/
+string
+>
+<
+!
+-
+-
+Name
+of
+the
+"
+notification
+channel
+"
+used
+for
+displaying
+a
+notification
+for
+updating
+an
+extension
+.
+See
+https
+:
+/
+/
+developer
+.
+android
+.
+com
+/
+training
+/
+notify
+-
+user
+/
+channels
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_updater_notification_channel_2
+"
+>
+Ven
+kirin
+n
+p
+vekan
 <
 /
 string
@@ -3998,6 +4171,85 @@ string
 !
 -
 -
+This
+is
+the
+caption
+for
+the
+extension
+installation
+progress
+overlay
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_extension_install_progress_caption
+"
+>
+P
+vek
+t
+j
+barkirin
+kontrolkirin
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+shown
+when
+something
+unexpected
+happened
+while
+trying
+to
+get
+the
+extension
+list
+from
+the
+server
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_failed_to_query_extensions
+"
+>
+L
+pirs
+na
+p
+vek
+bi
+ser
+neket
+!
+<
+/
+string
+>
+<
+!
+-
+-
 Error
 shown
 when
@@ -4121,13 +4373,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4155,6 +4423,243 @@ mozac_feature_addons_failed_to_install
 s
 nehate
 sazkirin
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+after
+failing
+to
+install
+an
+extension
+for
+which
+we
+don
+'
+t
+have
+its
+name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install
+"
+>
+Sazkirina
+v
+p
+vek
+bi
+ser
+neket
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Ev
+p
+vek
+nay
+sazkirin
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+a
+network
+error
+happened
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_network_error
+"
+>
+Ev
+p
+vek
+ji
+ber
+ewtiyeke
+gir
+dan
+nehat
+j
+barkirin
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+the
+downloaded
+file
+is
+corrupted
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_corrupt_error
+"
+>
+Ev
+p
+vek
+nehat
+sazkirin
+wisa
+xuya
+ye
+xirabe
+ye
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+not
+signed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_not_signed_error
+"
+>
+Ev
+p
+vek
+nehat
+sazkirin
+ji
+ber
+ku
+nehatiye
+pesendkirin
+.
 <
 /
 string
@@ -4278,6 +4783,20 @@ name
 =
 "
 mozac_feature_addons_blocklisted_1
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
@@ -5305,6 +5824,20 @@ name
 =
 "
 mozac_feature_addons_status_blocklisted
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
