Bug 1925522 - [Menu Redesign] Extensions subtext should be displayed in the Main menu. r=android-reviewers,avirvara
Differential Revision: https://phabricator.services.mozilla.com/D226499

UltraBlame original commit: e86d02ff8f7e359d0d8272d9809017df49355019

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -3809,6 +3809,45 @@ string
 !
 -
 -
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+No
+extensions
+enabled
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
