no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: c9bc16954449ea00bc96a811ae4885a70f80e030

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-kab/strings.xml
@@ -6232,6 +6232,74 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Asi
+zef
+-
+a
+yettusew
+el
+acku
+yet
+edda
+ef
+tsertit
+n
+Mozilla
+ef
+waya
+yensa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
