--- a/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-kab/strings.xml
@@ -3512,6 +3512,82 @@ string
 Browser
 menu
 banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+I
+useqdec
+n
+yisi
+zaf
+rmed
+-
+iten
+deg
+yi
+ewwaren
+ne
+s
+ufran
+n
+%
+s
+ddaw
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 link
 text
 for
@@ -9072,6 +9148,53 @@ UnusedResources
 >
 uBlock
 Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Sew
+el
+adellel
+s
+wudem
+amellil
+.
 <
 /
 string
