--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-bs/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-bs/strings.xml
@@ -3163,10 +3163,62 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nema
 internet
 konekcije
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+Izgleda
+da
+postoji
+problem
+s
+va
+om
+internet
+vezom
 <
 /
 string
@@ -3201,6 +3253,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Provjeri
 mre
@@ -3217,6 +3283,102 @@ za
 nekoliko
 trenutaka
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Poku
+ajte
+se
+povezati
+na
+drugom
+ure
+aju
+.
+Provjerite
+svoj
+modem
+ili
+ruter
+.
+Prekinite
+vezu
+i
+ponovo
+se
+pove
+ite
+na
+Wi
+-
+Fi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+ifra
+gre
+ke
+:
+NS_ERROR_OFFLINE
 <
 /
 string
