--- a/mobile/android/fenix/app/src/main/res/values-gl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gl/strings.xml
@@ -289,6 +289,47 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Navegaci
+n
+privada
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3686,6 +3727,47 @@ browser_menu_extensions_disabled_description
 >
 Desactivado
 temporalmente
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Non
+hai
+extensi
+ns
+activadas
 <
 /
 string
