--- a/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-nn-rNO/strings.xml
@@ -8853,6 +8853,40 @@ Content
 description
 for
 the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Legg
+til
+tilleggs
+-
+knapp
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
 star
 rating
 group
@@ -20154,6 +20188,52 @@ vil
 slette
 denne
 mappa
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+Er
+du
+sikker
+p
+at
+du
+vil
+slette
+det
+valde
+elementet
 ?
 <
 /
