no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: cb98d15e8224320535bfaa951fa903f810ed46e0

--- a/mobile/android/fenix/app/src/main/res/values-fr/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fr/strings.xml
@@ -292,6 +292,47 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Navigation
+priv
+e
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3865,6 +3906,46 @@ browser_menu_extensions_disabled_description
 D
 sactiv
 temporairement
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Aucune
+extension
+activ
+e
 <
 /
 string
