--- a/mobile/android/fenix/app/src/main/res/values-vi/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-vi/strings.xml
@@ -301,6 +301,50 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Duy
+t
+web
+ri
+ng
+t
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -4240,6 +4284,53 @@ hi
 u
 h
 a
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Kh
+ng
+c
+ti
+n
+ch
+n
+o
+c
+b
+t
 <
 /
 string
