--- a/mobile/android/fenix/app/src/main/res/values-hy-rAM/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-hy-rAM/strings.xml
@@ -274,6 +274,44 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3298,6 +3336,42 @@ name
 =
 "
 browser_menu_extensions_disabled_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
 "
 >
 <
