--- a/mobile/android/fenix/app/src/main/res/values-sk/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sk/strings.xml
@@ -291,6 +291,47 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+S
+kromn
+prehliadanie
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3864,6 +3905,48 @@ Do
 asne
 zak
 zan
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Nie
+s
+povolen
+iadne
+roz
+renia
 <
 /
 string
