Bug 1917696 - Regenerate Bergamot WASM files from new fork r=translations-reviewers,gregtatum
Now that the source and build logic have been moved upstream in
https://github.com/mozilla/firefox-translations-training/pull/902
we should regenerate the WASM artifcats using the new infrastructure
to ensure that they are still equivalent and compatible in tree.

This patch runs the scripts to build the new WASM artifacts and stores
them in tree. Independent of this patch, we should publish a new minor
version of the generated WASM binary to Remote Settings.

There shouldn't be any major changes, but we should ensure that everything
is building and running with our current infrastructure.

Differential Revision: https://phabricator.services.mozilla.com/D226940

UltraBlame original commit: 64b0099792b85a0b3a1db80cde27ddb9e75360e9

--- a/toolkit/components/translations/bergamot-translator/moz.yaml
+++ b/toolkit/components/translations/bergamot-translator/moz.yaml
@@ -85,11 +85,9 @@ github
 .
 com
 /
-browsermt
+mozilla
 /
-bergamot
--
-translator
+translations
 .
 git
 #
@@ -143,7 +141,7 @@ preferred
 )
 revision
 :
-05a87784973b6e1cc591f1f1a9a05c5873d9971e
+371c2daec4ffcd9d0d144aa6e95706a65e56f735
 #
 The
 package
